--- a/colab_server/templates/index.html
+++ b/colab_server/templates/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <title>Welcome to {{app_name}}</title>
-  </head>
-  <body>
-      <p>Message: {{ message }}!</p>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<p> CoLab Chat</p>
+{% endblock %}
+
+
