--- a/web/colab_server/templates/index.html
+++ b/web/colab_server/templates/index.html
@@ -3,4 +3,15 @@
 {% block content %}
 <p> This is the space for the chat client</p>
 <img src="{{url_for('static', filename='images/img.jpg')}}" alt="im" style="width:500px;height:500px;">
+  <h1>Flask-SSE Quickstart</h1>
+  <script>
+    var source = new EventSource("/stream");
+    source.addEventListener('greeting', function(event) {
+        var data = JSON.parse(event.data);
+        alert("The server says " + data.message);
+    }, false);
+    source.addEventListener('error', function(event) {
+        alert("Failed to connect to event stream. Is Redis running?");
+    }, false);
+  </script>
 {% endblock %}
