--- a/web/colab_server/templates/index.html
+++ b/web/colab_server/templates/index.html
@@ -5,23 +5,13 @@
 <img src="{{url_for('static', filename='images/img.jpg')}}" alt="im" style="width:500px;height:500px;">
   <h1>Flask-SSE Quickstart</h1>
   <script>
-
-    var source2 = new EventSource("{{url_for('sse.stream', channel='users.social')}}");
-    source2.addEventListener('greeting', function(event) {
-        var data = JSON.parse(event.data);
-        alert("The server says " + data.status);
-    }, false);
-    source2.addEventListener('error', function(event) {
-        alert("Failed to connect to event stream. Is Redis running?");
-    }, false);
-
     var source = new EventSource("{{url_for('sse.stream')}}");
     source.addEventListener('greeting', function(event) {
         var data = JSON.parse(event.data);
         alert("The server says " + data.message);
     }, false);
     source.addEventListener('error', function(event) {
-        alert("Failed to connect to event stream. Is Redis running?");
+        alert("Failed to connect to event stream. Is Kafka running?");
     }, false);
   </script>
 {% endblock %}
