Fake generator returns messages over sse

--- a/web/colab_server/templates/index.html
+++ b/web/colab_server/templates/index.html
@@ -6,7 +6,7 @@
   <h1>Flask-SSE Quickstart</h1>
   <script>
     var source = new EventSource("{{url_for('sse.stream')}}");
-    source.addEventListener('greeting', function(event) {
+    source.addEventListener('message', function(event) {
         var data = JSON.parse(event.data);
         alert("The server says " + data.message);
     }, false);
